--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "co-mongo",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "author": "Thom Seddon",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/thomseddon/co-mongo"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thomseddon/co-mongo"
   },
   "license": "MIT",
   "dependencies": {
-    "mongodb": "~2.0.25"
+    "mongodb": "^2.2.5"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
-    "should": "~3.1.2",
-    "co": "~3.0.2"
+    "co": "~3.0.2",
+    "mocha": "^3.0.1",
+    "should": "^10.0.0"
   }
 }
